; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/extr_rist.c_rist_WriteTo_i11e_Locked.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/extr_rist.c_rist_WriteTo_i11e_Locked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i8*, i64, %struct.sockaddr*, i32)* @rist_WriteTo_i11e_Locked to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rist_WriteTo_i11e_Locked(i32 %0, i32 %1, i8* %2, i64 %3, %struct.sockaddr* %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca %struct.sockaddr*, align 8
  %12 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i8* %2, i8** %9, align 8
  store i64 %3, i64* %10, align 8
  store %struct.sockaddr* %4, %struct.sockaddr** %11, align 8
  store i32 %5, i32* %12, align 4
  %13 = call i32 @vlc_mutex_lock(i32* %7)
  %14 = load i32, i32* %8, align 4
  %15 = load i8*, i8** %9, align 8
  %16 = load i64, i64* %10, align 8
  %17 = load %struct.sockaddr*, %struct.sockaddr** %11, align 8
  %18 = load i32, i32* %12, align 4
  %19 = call i32 @rist_WriteTo_i11e(i32 %14, i8* %15, i64 %16, %struct.sockaddr* %17, i32 %18)
  %20 = call i32 @vlc_mutex_unlock(i32* %7)
  ret void
}

declare dso_local i32 @vlc_mutex_lock(i32*) #1

declare dso_local i32 @rist_WriteTo_i11e(i32, i8*, i64, %struct.sockaddr*, i32) #1

declare dso_local i32 @vlc_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
